<resources>
    <string name="add">Add</string>
    <string name="addArtifact">Add Artifact</string>
    <string name="admin">Admin</string>
    <string name="allArtifacts">All Artifacts</string>
    <string name="app_name">TAAM Collection Management</string>
    <string name="back">Back</string>
    <string name="category">Category</string>
    <string name="clearAll">Clear All</string>
    <string name="createReport">Create Report</string>
    <string name="defaultFile">No File Uploaded</string>
    <string name="desc">Description</string>
    <string name="fileNameHeader">File Uploaded:</string>
    <string name="image">image</string>
    <string name="lotNum">Lot Number</string>
    <string name="lotNumShort">Lot #</string>
    <string name="name">Name</string>
    <string name="period">Period</string>
    <string name="remove">Remove</string>
    <string name="report">Report</string>
    <string name="reportFilterHeader">Filter</string>
    <string name="reportHeader">Choose an option to generate a report by:</string>\
    <string name="reportKeyHeader">Enter text to filter artifacts by:</string>
    <string name="result">Result</string>
    <string name="reportOptionHeader">Option</string>
    <string name="reportPicDescOnly">Use picture and description only</string>
    <string name="search">Search</string>
    <string name="generateReport">Generate Report</string>
    <string name="generateReportText">Generating a report will create a PDF file in your Downloads folder listing the artifacts that match your selected option and input filter.</string>
    <string name="text">Text</string>
    <string name="video">video</string>
    <string name="view">View</string>
    <string name="Media">Media</string>
    <string name="uploadPicVid">Upload Picture/Video</string>
    <string name="signOut">Sign Out</string>
    <string name="logoutText">Are you sure you want to sign out?</string>

    <string name="signinText">Please enter your email and password.</string>
    <string name="signinButton">Sign in</string>
    <string name="signInToolbar">Sign In</string>
    <string name="loginEmailEmpty">Please enter your email</string>
    <string name="loginPasswordEmpty">Please enter your password</string>

    <string-array name="categories">
        <item>Brass</item>
        <item>Bronze</item>
        <item>Calligraphy</item>
        <item>Copper</item>
        <item>Enamel</item>
        <item>Gold and Silver</item>
        <item>Jade</item>
        <item>Lacquer</item>
        <item>Painting</item>
        <item>Rubbings</item>
    </string-array>

    <string-array name="periods">
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chunqiu</item>
        <item>Zhanguo</item>
        <item>Qin</item>
        <item>Han</item>
        <item>Sanguo</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Sui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>
    <string name="signOutMessage">Successfully signed out</string>
    <string name="signOutToolbar">Sign Out</string>
    <string name="signInSuccess">Successfully signed in</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="resetPassword">Reset Password?</string>
    <string name="resetPasswordNo">Cancel</string>
    <string name="resetPasswordMessage">If an account with this email exists, a password reset link will be sent.</string>
    <string name="resetPasswordOk">Send</string>

</resources>