<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addArtifactToolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="667dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:maxButtonHeight="60dp"
        app:navigationIcon="@drawable/baseline_clear_24"
        app:title="Add Artifact"
        app:titleTextColor="@color/backgroundLight" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addArtifactToolbar">

        <EditText
            android:id="@+id/editLotNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="480dp"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/lotNum"
            android:inputType="number"
            android:maxWidth="488dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:maxWidth="488dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/categoryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/editCategory"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:dropDownWidth="wrap_content"
            android:entries="@array/categories"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/periodHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period" />

        <Spinner
            android:id="@+id/editPeriod"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:dropDownWidth="150dp"
            android:entries="@array/periods"
            android:minHeight="48dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:height="300dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/desc"
            android:inputType="textMultiLine"
            android:maxHeight="300dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/uploadPicVid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploadPicVid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/fileHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fileNameHeader"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defaultFile"
                android:textAlignment="textStart"
                android:translationX="5dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="674dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:height="60dp"
        android:text="@string/add"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>