<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AllArtifactsTableFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:fadeScrollbars="false"
            android:orientation="horizontal"
            android:padding="3dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/lotNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15"
                android:text="@string/lotNumShort"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.35"
                android:backgroundTint="@color/primaryDark"
                android:text="@string/name"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:text="@string/category"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/period"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:text="@string/period"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artifactTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>